[package]
name = "neodepends"
version = "0.1.0"
description = "Quickly resolve syntactical dependencies between source files"
homepage = "https://github.com/jlefever/neodepends"
repository = "https://github.com/jlefever/neodepends"
readme = "README.md"
license = "Apache-2.0"
authors = ["Jason Lefever <jason.titus.lefever@gmail.com>"]
edition = "2021"

[dependencies]
# Add stack-graphs dependencies using a submodule because we want the most up-to-date version
lsp-positions = { path = "thirdparty/stack-graphs/lsp-positions" }
stack-graphs = { path = "thirdparty/stack-graphs/stack-graphs" }
tree-sitter-stack-graphs = { path = "thirdparty/stack-graphs/tree-sitter-stack-graphs" }
tree-sitter-stack-graphs-java = { path = "thirdparty/stack-graphs/languages/tree-sitter-stack-graphs-java" }
tree-sitter-stack-graphs-javascript = { path = "thirdparty/stack-graphs/languages/tree-sitter-stack-graphs-javascript" }
tree-sitter-stack-graphs-python = { path = "thirdparty/stack-graphs/languages/tree-sitter-stack-graphs-python" }
tree-sitter-stack-graphs-typescript = { path = "thirdparty/stack-graphs/languages/tree-sitter-stack-graphs-typescript" }

# Dependencies from crates.io
log = "0.4.17"
env_logger = "0.10.0"
anyhow = { version = "1.0.79", features = ["backtrace"] }
bincode = "2.0.0-rc.3"
tree-sitter-graph = "0.11.0"
clap = { version = "4.4.18", features = ["derive", "cargo"] }
git2 = "0.18.1"
walkdir = "2.4.0"
itertools = "0.12.0"
indicatif = { version = "0.17.7", features = ["improved_unicode"] }
indicatif-log-bridge = "0.2.2"
clap-verbosity-flag = "2.1.2"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
lazy_static = "1.4.0"
tree-sitter = { version = "0.20.10", features = ["lazy_static"] }
derive_builder = "0.13.0"
sha1 = "0.10.6"
slotmap = { version = "1.0.7", features = ["serde"] }
strum = { version = "0.26.1", features = ["derive"] }
strum_macros = "0.26"
hex = "0.4"
rocksdb = "0.21.0"
subprocess = "0.2.9"
tempfile = "3.10.1"
