[package]
name = "neodepends"
version = "0.0.8"
description = "Quickly extract entities, dependencies, and changes from a software project"
homepage = "https://github.com/jlefever/neodepends"
repository = "https://github.com/jlefever/neodepends"
readme = "README.md"
license = "Apache-2.0"
authors = ["Jason Lefever <jason.titus.lefever@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
clap = { version = "4.4.18", features = ["cargo", "derive", "wrap_help"] }
clap-verbosity-flag = "2.1.2"
counter = "0.5.7"
csv = "1.3.0"
derive_builder = "0.13.0"
env_logger = "0.10.0"
git2 = "0.18.1"
hex = "0.4"
itertools = "0.12.0"
lazy_static = "1.4.0"
log = "0.4.17"
lsp-positions = "0.3"
rayon = "1.10.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
sha1 = "0.10.6"
stack-graphs = { version = "0.13", features = ["bincode"] }
strum = { version = "0.26.1", features = ["derive"] }
strum_macros = "0.26"
subprocess = "0.2.9"
tempfile = "3.10.1"
tree-sitter = "0.20"
tree-sitter-c = "0.20"
tree-sitter-cpp = "0.20"
tree-sitter-go = "0.20"
tree-sitter-graph = "0.11"
tree-sitter-java = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-kotlin = "0.3"
tree-sitter-python = "0.20"
tree-sitter-ruby = "0.20"
tree-sitter-stack-graphs = "0.8.1"
tree-sitter-typescript = "=0.20.2"
walkdir = "2.4.0"
